--- a/supla_autodiscovery/config.yaml
+++ b/supla_autodiscovery/config.yaml
@@ -1,5 +1,5 @@
 name: Supla MQTT Autodiscovery
-version: "1.0.6-patched2"
+version: "1.1.0-alpha"
 slug: supla_autodiscovery
 description: "Automatyczne generowanie autodiscovery dla danych Supla MQTT"
 arch:
